--- a/page-Mysterious-dnipro.html
+++ b/page-Mysterious-dnipro.html
@@ -4,57 +4,51 @@
 	<script>
 		
 	    //Заголовок
-	    let title = "Title тура ";			
+	    let title = "Загадочный Днепр ";			
 	    // Описание 
-	    let descriptionHead = "Туры выходного дня - Новый поворот, ОПИСАНИЕ  ";		
+	    let descriptionHead = "Туры выходного дня - Новый поворот, ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СЕЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ! ";		
 	    //Ключевые слова
-	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Ключевые слова ";		
+	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Днепр, экскурсия квест, Романтический Днепр, Яхтклуб Сич ";		
 	    //Cсылкa Tура 
-	    let linkPage = "https://novipovorot.pp.ua/page-example.html";		
+	    let linkPage = "https://novipovorot.pp.ua/page-Mysterious-dnipro.html";		
 	    //Картинка
-	    let imgInTour = "https://picsum.photos/825/473";		
+	    let imgInTour = "./images/Mysterious-dnipro/inside-Mysterious-dnipro.jpg";		
 	    //Дата тура
-	    let dateTour = "2022";		
+	    let dateTour = "12 февраля 2022";		
 	    //Подзаголовок
-	    let subtitle = "Подзаголовок";		
+	    let subtitle = "ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СЕЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ!";		
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
-		{program: 'Описание1'}, 
-	        {program: 'Описание2'}, 
-		{program: 'Описание3'}, 
-		{program: 'Описание4'}
+		{program: 'Суперское место Днепра, самое яркое и необычное. Домики на воде - Бали в миниатюре, романтично и красиво, идеальное место для фото. Белые павлины, барашки, гусики и многие другие животные гуляющие по Яхтклубу. Это удивление и восторг! '}, 
+	        {program: 'Квест- прогулка Миллион сердец и Купидон. Мы побываем в самых интересных и романтичных местах Днепра. Дворец Потемкина и памятник вечной невесте, потрясающая обзорная площадка город на ладони и еще много всего интересного! '}, 
+		{program: 'Ждем Вас, Ваших родных, близких и друзей на экскурсию! '}, 
+		{program: 'Собери компанию 12 человек, 13 едет бесплатно ) '}
 	   ];		
 	  //Информируем
           let inform = [
-		{informPrice: 'Цена билета до ...: взрослые ... грн., дети от 3 до 12 лет ... грн., дети от 13 до 17 лет ... грн.'}, 
-	        {informPrice: 'С ...: взрослые ... грн., дети от 3 до 12 лет ... грн.; дети от 13 до 17 лет ... грн.'}, 
-		{informPrice:  '*Примечание: До 5 лет без места в транспорте бесплатно.'}
-	   ];	
+		{informPrice: 'Цена билета при брони до 8.02: взрослые 500 грн., дети от 6 до 12 лет 480 грн.'}, 
+	        {informPrice: 'С 9 до 11.02 если будут места на тур: взрослые 520 грн., дети от 6 до 12 лет .500 грн.'}, 
+		{informPrice:  '*до 5 бесплатно(без предоставления отдельного места в транспорте).ВНИМАНИЕ! ДЛЯ ПУТЕШЕСТВИЯ ВСЕМ СТАРШЕ 18 ЛЕТ НЕОБХОДИМО ИМЕТЬ РАЗРЕШАЮЩИЕ ДОКУМЕНТЫ СОГЛАСНО ПОСТАНОВЛЕНИЯ КАБМИНА УКРАИНЫ 1066 ОТ 11.10.21.'} ];	
 	   //Стоимость
-	   let price = "1000 Грн.";		
+	   let price = "от 480 Грн.";		
 	   //Продолжительность
 	   let duration	= "1 День";	
 	   //Описание тура
 	   let descTours = [
-		{time: '09:01', description: 'Описание1'}, 
-		{time: '09:02', description: 'Описание2'}, 
-		{time: '09:03', description: 'Описание3'}, 
-		{time: '18:00', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
+		{time: '11:20', description: 'выезд с центра Запорожья после минутки позитива.  Автовокзал-Фестивальная -Металлургов - Каховская заберем Вас в этих местах и в путь!'}, 
+		{time: '13:00-14:30', description: 'Мы на Бали, шикарные домики на воде. Нас встречают смешные гуси, обязательно берем угощения для них с собой! Вокруг белые и зеленые павлины, милашки выдрочки и забавный баранчик. Неспешно гуляем по Яхт Клубу, делаем фоточки и видосы на память. Полнейший восторг. '}, 
+		{time: '15:00-18:00', description: 'Прогулка по самым Загадочным местам Днепра. Начнем у дворца Потоцкого, пройдемся по уютному парку Шевченко где покормим белочек орешками! Выйдем на восхитительную обзорную площадку "Днепр на ладони", прогуляемся по пешеходному мостику на Монастырский остров. Поищем все сердца города Днепра и познакомимся с купидоном ;) Посмотрим как зажигаются вечерние огни Днепра и получим полный кайф от путешествия! '}, 
+		{time: '19:40', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
 	   ];		
 	  //В стоимость входит
 	  let includedInThePrice = [
-		{includePrice: 'Описание1'}, 
-	        {includePrice: 'Описание2'}, 
-		{includePrice: 'Описание3'}, 
-		{includePrice: 'Описание4'}
+		{includePrice: 'проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; количества людей в группе), '}, 
+	        {includePrice: 'сопровождение представителя нашей компании;'}, 
+		{includePrice: 'экскурсионная квест- прогулка 1000 сердец Днепра;'}, 
+		{includePrice: 'магнит от Нового поворота, '},
+		 {includePrice: 'самое замечательное настроение. '}
 	   ];	
-	  //В стоимость не входит
-	  let priceDoesNotInclude = [
-		{doesNotIncludePrice: 'Описание1'}, 
-	        {doesNotIncludePrice: 'Описание2'}, 
-		{doesNotIncludePrice: 'Описание3'}, 
-		{doesNotIncludePrice: 'Описание4'}
-	   ];	
+	 	
 	  //Тексты подсказок
 	  let helpTexts = [
 		{badge: 'Запорожье'}, 
@@ -66,11 +60,11 @@
 	</script> 
 
 	<!-- Open Graph -->
-        <meta property="og:title" content="28 Лошадок и Симба">
-        <meta property="og:description" content="Туры выходного дня - Новый поворот, 28 лошадок и зоопарк Симба. Лучший выходной!" />
+        <meta property="og:title" content="Загадочный Днепр">
+        <meta property="og:description" content="Туры выходного дня - Новый поворот, ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СЕЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ!" />
         <meta property="og:type" content="website" />
-	<meta property="og:image" content="./images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg">
-        <meta property="og:url" content="https://novipovorot.pp.ua/page-Horses-Zaporizhzhia.html" />
+	<meta property="og:image" content="./images/Mysterious-dnipro/inside-Mysterious-dnipro.jpg">
+        <meta property="og:url" content="https://novipovorot.pp.ua/page-Mysterious-dnipro.html" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
