--- a/booking.html
+++ b/booking.html
@@ -143,6 +143,7 @@
                                     <option>Выбрать Тур</option><!--Выбрать Тур-->
                                     
                                     <option>Грузия лето</option>
+                                    <option>Загадочный Днепр</option>
                                     <option>Зоопарк Харьков и Фентези Парк</option>
                                     <option>Сырная ферма с дегустацией</option>
                                     <option>Скифский стан</option>
