--- a/packages.html
+++ b/packages.html
@@ -144,6 +144,33 @@
                     </div>
                 </div>
                 <!-- //Скифский стан Хортица -->
+                    
+                    <!-- Загадочный Днепр  -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Mysterious-dnipro.html">
+                            <img src="images/Mysterious-dnipro/home-Mysterious-dnipro.jpg" alt="Mysterious-dnipro"
+                                class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span> от 480грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>  Днепр </h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Mysterious-dnipro.html">
+                             Загадочный Днепр
+                            </a>
+                        </h5>
+                        <p>
+                        Загадочный Днепр
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 12 февраля </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Загадочный Днепр  -->
                 
                 <!--  3 D роспись Зоопарк  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
