--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         </h5>
                         <p>Самый крутой зоопарк-сафари!</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  29 Января </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  19 Февраля </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
