--- a/page-Zoo-Kharkiv.html
+++ b/page-Zoo-Kharkiv.html
@@ -14,7 +14,7 @@
 	    //Картинка
 	    let imgInTour = "./images/Zoo-Kharkiv/inside-Zoo-Kharkiv.jpg";		
 	    //Дата тура
-	    let dateTour = "29 января и 19 февраля 2022";		
+	    let dateTour = "19 февраля 2022";		
 	    //Подзаголовок
 	    let subtitle = "Зоопарк Харьков и Фентези парк!  Новый центральный зоопарк -сафари!Сад Шевченко и сияющий Фентези парк. Музей Кофе и Парк Горького!";		
 	   //Описание прогарммы тура
