--- a/page-Mysterious-dnipro.html
+++ b/page-Mysterious-dnipro.html
@@ -6,7 +6,7 @@
 	    //Заголовок
 	    let title = "Загадочный Днепр ";			
 	    // Описание 
-	    let descriptionHead = "Туры выходного дня - Новый поворот, ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СЕЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ! ";		
+	    let descriptionHead = "Туры выходного дня - Новый поворот, ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СИЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ! ";		
 	    //Ключевые слова
 	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Днепр, экскурсия квест, Романтический Днепр, Яхтклуб Сич ";		
 	    //Cсылкa Tура 
@@ -16,7 +16,7 @@
 	    //Дата тура
 	    let dateTour = "12 февраля 2022";		
 	    //Подзаголовок
-	    let subtitle = "ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СЕЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ!";		
+	    let subtitle = "ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СИЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ!";		
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
 		{program: 'Суперское место Днепра, самое яркое и необычное. Домики на воде - Бали в миниатюре, романтично и красиво, идеальное место для фото. Белые павлины, барашки, гусики и многие другие животные гуляющие по Яхтклубу. Это удивление и восторг! '}, 
@@ -61,7 +61,7 @@
 
 	<!-- Open Graph -->
         <meta property="og:title" content="Загадочный Днепр">
-        <meta property="og:description" content="Туры выходного дня - Новый поворот, ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СЕЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ!" />
+        <meta property="og:description" content="Туры выходного дня - Новый поворот, ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СИЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ!" />
         <meta property="og:type" content="website" />
 	<meta property="og:image" content="./images/Mysterious-dnipro/inside-Mysterious-dnipro.jpg">
         <meta property="og:url" content="https://novipovorot.pp.ua/page-Mysterious-dnipro.html" />
