--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -157,6 +157,12 @@
 					  <td> 20 Февраля</td>
 				       </tr>
 				      
+				        <tr>
+					  <th scope="row"></th>
+					  <td><a target="_blank" href="#"> Пивная экскурсия </a></td>
+					  <td> 23 февраля </td>
+				       </tr>
+				      
 				      <tr>
 					  <th scope="row"></th>
 					  <td><a target="_blank" href="#"> Масленица по-Петриковски. Объедятина по сельски!</a></td>
