--- a/page-Beer.html
+++ b/page-Beer.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <title>Пиво | Новый поворот | Экскурсия и дегустация в частную пивоварню </title>
+    <title> Пивная экскурсия | Новый поворот | Экскурсия с дегустацией в частную пивоварню </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description"
@@ -114,7 +114,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 29 Августа</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 23 Февраля </span>
                                 </li>
                             </ul>
                         </div>
@@ -122,12 +122,11 @@
                             Экскурсия и дегустация в частную пивоварню
                         </h4>
                         <p class="txt-alg-jf">
-                            Вишневое, травяное, облепихово-медовое,
-                            терново-медовое, фирменное светлое и темное пиво!
+                           Травяное шалфейное и Синяя борода,  фирменное светлое и темное пиво!
                             Вкуснейшее пиво на частной пивоварне! Мы узнаем
                             как проходит процесс создания этих пивных шедевров.
                             Побываем на экскурсии в самой пивоварне, а после
-                            продегустируем 6 видов вкуснейшего натурального
+                            продегустируем 4 вида вкуснейшего натурального
                             пива под аккомпанемент мясной и рыбной закуски!
                         </p>
                         <hr>
@@ -141,7 +140,7 @@
                             Запись уже открыта!
                         </div>
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>220 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                         <br>
@@ -229,19 +228,18 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p>
-                                            <b>16:00</b> - сбор группы и после минутки
+                                            <b>18:30</b> - сбор группы и после минутки
                                             позитива пешая прогулка до места начала
                                             экскурсии!
                                         </p>
-                                        <p><b>16:05 - 16:45</b> - экскурсия
+                                        <p><b>18:35 - 19:15</b> - экскурсия
                                             по частной пивоварне. Мы увидим варочный
                                             и бродильный цеха, почувствуем дух хмеля
                                             и солода. Узнаем секреты ручной варки пива!</p>
-                                        <p><b>16:45 - 17:30</b> дегустация 6 видов
+                                        <p><b>19:20 - 20:00</b> дегустация 4 видов
                                             вкуснейшего натурального пива. Сваренного
-                                            на уже полюбившейся пивоварне: травяное,
-                                            пшеничное, облепихово-медовое, синяя
-                                            борода (сухой стаут) и конечно фирменное
+                                            на уже полюбившейся пивоварне: травяное шалфейное,
+                                            синяя борода (сухой стаут) и конечно фирменное
                                             светлое и темное пиво! Под закуску из
                                             балыка из карпа, бастурмы, сыровяленой
                                             колбаски и вяленого мяса вы ощутите весь
@@ -265,7 +263,7 @@
                                     экскурсия по частной пивоварне;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    дегустация 6 видов пива и небольшая мясная и рыбная закуска;
+                                    дегустация 4 видов пива и небольшая мясная и рыбная закуска;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     скидка 10% при покупке пива в пивоварне в день экскурсии;
@@ -283,10 +281,7 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    питание и дополнительные расходы;
-                                </li>
-                                <li class="list-group-item list-group-item-danger ">
-                                    проезд до места начала экскурсии и обратно ;
+                                  проезд до места начала экскурсии и обратно ;
                                 </li>
                                 <ul>
                         </div>
