--- a/page-Arabat-baths.html
+++ b/page-Arabat-baths.html
@@ -137,7 +137,7 @@
                                 <li>
                                     <!-- Дата -->
                                     <span class="fa fa-calendar mr-2"></span>Дата:&nbsp;<span class="dateOfTravel">
-											15 Января 2022
+											26 Февраля 2022
 										        </span>
                                     <!-- //Дата-->
                                 </li>
@@ -174,15 +174,15 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
-                                Цена билета при брони до <u> 7.01 </u>: взрослые 
-                                 <strong> 900 </strong> грн.,
+                                Цена билета при брони до <u> 15,02 </u>: взрослые 
+                                 <strong> 800 </strong> грн., или 650грн /не оборудованый источник/
                                    дети  от 6 до 12 лет 
-                                 <strong> 700 </strong>грн.;
+                                 <strong> 650 </strong>грн.;
 				  <hr>
                                 При брони с <u> 8.01 до 14.01 если будут места </u>: взрослые 
-                                 <strong> 950 </strong>грн., 
+                                 <strong> 850 </strong>грн.,или 700грн /не оборудованый источник/ 
                                    дети от 6 до 12 лет
-                                 <strong> 750 </strong>грн.;
+                                 <strong> 700 </strong>грн.;
 				   <hr>
                                  <i>*Примечание </i>
 				    до 5ти лет бесплатно (без предоставления отдельного места в транспорте,
@@ -193,7 +193,7 @@
                       
                         <!-- Стоимость, Продолжительность -->
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 900 грн </span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> от 650 грн </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span> 1 День </span></li>
                         </ul>
                         <!-- //Стоимость, Продолжительность -->
@@ -295,6 +295,7 @@
                                          Посещаем комплекс Арабатские термы. Оборудованный в современном стиле, где расположена 
 					 удобная купальня как для взрослых, так и для деток. Все желающие прогуляються на Глицериновое 
 					 озеро и Сиваш! Покушают и отдохнут на пркрасном курорте Аработской косы!
+						 Или чтоб было дешевле, возможно посетить не оборудованный источник, экономия 150 грн 
                                          </p>
                                          <p class="txt-alg-jf"> <strong> 15:40-16:40 </strong>
                                          Дегустация вин на закате солнца. Именно в это время стоит посещать Розовое озеро! Круто, красиво и очень необычно!
