--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -120,7 +120,7 @@
 				      
 				        <tr>
 					  <th scope="row"></th>
-					  <td><a target="_blank" href="https://novipovorot.pp.ua/page-Mysterious-dnipro.html"> Романтичный Днепр 1000000 сердец</a></td>
+					  <td><a target="_blank" href="https://novipovorot.pp.ua/page-Mysterious-dnipro.html"> Загадочный Днепр. Экскурсия квест</a></td>
 					  <td> 12 февраля </td>
 				       </tr>
 				      
