--- a/booking.html
+++ b/booking.html
@@ -146,15 +146,17 @@
                                     <option>Загадочный Днепр</option>
                                     <option>Зоопарк Харьков и Фентези Парк</option>
                                     <option>Сырная ферма с дегустацией</option>
+                                    <option>Арабатские термы</option>
+                                    <option>Пивная экскурсия</option>
+                                    <option>Винная экскурсия</option>
                                     <option>Скифский стан</option>
                                     <option>3Д роспись Зоопарк</option>
                                     <option>Лимонарий</option>
                                     <option>Каменец Подольский и Умань</option>
+                                    <option>Карпаты 2022</option>
                                     <option>28 Лошадок и Симба</option>
                                     <option>Харьков Рождество</option>
-                                    <option>Арабатские термы</option>
                                     <option>Рождество по-Королевски</option>
-                                    <option>Карпаты 2022</option>
                                     <option>Новогодние огни Днепра</option>
                                     <option>Мурляндия</option>
                                     <option>Киев. Харьков. Полтава</option>
@@ -180,11 +182,9 @@
                                     <option>Фестиваль Воздушных Шаров </option>
                                     <option>Сырная Ферма И Пасека</option>
                                     <option>Зоопарк Пылышенко-Замок-Озеро</option>
-                                    <option>Вино</option>
                                     <option>Грузия</option>
                                     <option>Tik Tok pati</option>
                                     <option>Одесса</option>
-                                    <option>Пиво</option>
                                     <option>ЛОЛ</option>
                                     <option>Турция</option>
                                     <option>Хортица</option>
