--- a/packages.html
+++ b/packages.html
@@ -250,7 +250,7 @@
                 </div>     
                 <!--  //Зоопарк Харьков и Фентези парк  -->           
                                                                          
-                <!--  Лимонарий   -->
+                <!--  Лимонарий  экскурсия  -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
@@ -262,7 +262,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                                Лимонарий
+                               Лимонарий  экскурсия 
                             </a>
                         </h5>
                         <p>Экскурсия в Лимонный сад, удивительное место</p>
@@ -272,7 +272,7 @@
                         </ul>
                     </div>
                 </div>             
-                <!--  //Лимонарий -->
+                <!--  //Лимонарий  экскурсия  -->
                     
                      <!--  Пивная экскурсия -->
                 <div class="col-lg-3 col-sm-6 mb-5">
@@ -309,7 +309,7 @@
                         <p><span class="fa fa-tags"></span> <span> от 650 грн</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Арабатские термы и Розовое озеро</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Арабатская стрелка</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Arabat-baths.html">
                                Арабатские термы и Розовое озеро
