--- a/page-Mysterious-dnipro.html
+++ b/page-Mysterious-dnipro.html
@@ -6,7 +6,7 @@
 	    //Заголовок
 	    let title = "Загадочный Днепр ";			
 	    // Описание 
-	    let descriptionHead = "Туры выходного дня - Новый поворот, ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СИЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ! ";		
+	    let descriptionHead = "Туры выходного дня - Новый поворот, ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СИЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ ";		
 	    //Ключевые слова
 	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Днепр, экскурсия квест, Романтический Днепр, Яхтклуб Сич ";		
 	    //Cсылкa Tура 
@@ -14,20 +14,20 @@
 	    //Картинка
 	    let imgInTour = "./images/Mysterious-dnipro/inside-Mysterious-dnipro.jpg";		
 	    //Дата тура
-	    let dateTour = "12 февраля 2022";		
+	    let dateTour = "20 марта 2022";		
 	    //Подзаголовок
-	    let subtitle = "ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СИЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ!";		
+	    let subtitle = "ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СИЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ ";		
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
 		{program: 'Суперское место Днепра, самое яркое и необычное. Домики на воде - Бали в миниатюре, романтично и красиво, идеальное место для фото. Белые павлины, барашки, гусики и многие другие животные гуляющие по Яхтклубу. Это удивление и восторг! '}, 
-	        {program: 'Квест- прогулка Миллион сердец и Купидон. Мы побываем в самых интересных и романтичных местах Днепра. Дворец Потемкина и памятник вечной невесте, потрясающая обзорная площадка город на ладони и еще много всего интересного! '}, 
+	        {program: 'Квест- прогулка. Мы побываем в самых интересных и романтичных местах Днепра. Дворец Потемкина и памятник вечной невесте, потрясающая обзорная площадка город на ладони и еще много всего интересного! '}, 
 		{program: 'Ждем Вас, Ваших родных, близких и друзей на экскурсию! '}, 
 		{program: 'Собери компанию 12 человек, 13 едет бесплатно ) '}
 	   ];		
 	  //Информируем
           let inform = [
-		{informPrice: 'Цена билета при брони до 8.02: взрослые 500 грн., дети от 6 до 12 лет 480 грн.'}, 
-	        {informPrice: 'С 9 до 11.02 если будут места на тур: взрослые 520 грн., дети от 6 до 12 лет .500 грн.'}, 
+		{informPrice: 'Цена билета при брони до 8.03: взрослые 500 грн., дети от 6 до 12 лет 480 грн.'}, 
+	        {informPrice: 'С 9 до 19.03 если будут места на тур: взрослые 520 грн., дети от 6 до 12 лет .500 грн.'}, 
 		{informPrice:  '*до 5 бесплатно(без предоставления отдельного места в транспорте).ВНИМАНИЕ! ДЛЯ ПУТЕШЕСТВИЯ ВСЕМ СТАРШЕ 18 ЛЕТ НЕОБХОДИМО ИМЕТЬ РАЗРЕШАЮЩИЕ ДОКУМЕНТЫ СОГЛАСНО ПОСТАНОВЛЕНИЯ КАБМИНА УКРАИНЫ 1066 ОТ 11.10.21.'} ];	
 	   //Стоимость
 	   let price = "от 480 Грн.";		
@@ -44,7 +44,7 @@
 	  let includedInThePrice = [
 		{includePrice: 'проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; количества людей в группе), '}, 
 	        {includePrice: 'сопровождение представителя нашей компании;'}, 
-		{includePrice: 'экскурсионная квест- прогулка 1000 сердец Днепра;'}, 
+		{includePrice: 'экскурсионная-квест- прогулка 1000 сердец Днепра;'}, 
 		{includePrice: 'магнит от Нового поворота, '},
 		 {includePrice: 'самое замечательное настроение. '}
 	   ];	
@@ -61,7 +61,7 @@
 
 	<!-- Open Graph -->
         <meta property="og:title" content="Загадочный Днепр">
-        <meta property="og:description" content="Туры выходного дня - Новый поворот, ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СИЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ КУПИДОН И 1000 СЕРДЕЦ!" />
+        <meta property="og:description" content="Туры выходного дня - Новый поворот, ЗАГАДОЧНЫЙ ДНЕПР! ЯХТКЛУБ СИЧ ДНЕПР - БАЛИ В МИНИАТЮРЕ.  ЭКСКУРСИЯ-КВЕСТ " />
         <meta property="og:type" content="website" />
 	<meta property="og:image" content="./images/Mysterious-dnipro/inside-Mysterious-dnipro.jpg">
         <meta property="og:url" content="https://novipovorot.pp.ua/page-Mysterious-dnipro.html" />
