--- a/page-cheese-farm-tasting.html
+++ b/page-cheese-farm-tasting.html
@@ -130,7 +130,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                    <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">  13 Февраля </span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">  7 Марта </span>
                                     <!-- //Дата -->
                                 </li>
                             </li>
@@ -150,7 +150,7 @@
                             Побывай на экскурсии с дегустацией 7 видов сыра... Покорми козочек и сделай крутое селфи
                             </p>
                             <p class="txt-alg-jf tour-program-description-3">
-                            Подойдет от 0 до 10000 лет🙂, все будут в восторге! 
+                            Подойдет от 0 до 100 лет🙂, все будут в восторге! 
                             </p>
                             <!-- Описание прогарммы тура -->
                      </div>
