--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <title>Кофе Исла | Новый поворот | Экскурсия и дегустация кофе Исла </title>
+    <title> Кофейная экскурсия| Новый поворот | Экскурсия и дегустация кофе Исла </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description"
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="Tуры выходного дня 'Новый поворот', Экскурсия и дегустация кофе Исла, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
-    <meta property="og:title" content="Кофе Isla">
+    <meta property="og:title" content="Кофейная экскурсия">
     <meta property="og:description" content="Экскурсия и дегустация кофе Isla!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-cofe-Isla.html" />
@@ -107,7 +107,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 12 марта 2022
                                     </span>
                                 </li>
                             </ul>
@@ -127,7 +127,7 @@
                             Запись уже открыта!</span>
                         </div>
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span> от 150 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                         <br> -->
@@ -215,22 +215,18 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p>
-                                            <b>--</b> - сбор группы, после минутки позитива пешая прогулка до места
+                                            <b>13:45</b> - сбор группы, после минутки позитива пешая прогулка до места
                                             начала экскурсии! Участие по предварительной записи и предоплате 50%!
                                         </p>
-                                        <p><b>--</b> - экскурсия
-                                            по частной пивоварне. Мы увидим варочный
-                                            и бродильный цеха, почувствуем дух хмеля
-                                            и солода. Узнаем секреты ручной варки пива!</p>
-                                        <p><b>--</b>
-                                            Мы увидим весь "путь кофе" от зеленых зернышек, до ароматного напитка.
-                                            Услышим рассказ местного экскурсовода о   видах кофе и вариациях его
-                                            приготовления , тонкостях кофейного искусства!
-                                            Мы продегустируем вкуснейший кофе: американо, эспрессо,  капучино...
+                                        <p><b>14:00 -16:00</b> - Мы увидим весь "путь кофе" от зеленых зернышек, до ароматного напитка. 
+                                        Услышим рассказ местного экскурсовода о   видах кофе и вариациях его приготовления , тонкостях кофейного искусства! 
+                                        Мы продегустируем вкуснейший 3-4 вида кофе. Итальянский, турку, сифон и еще один вид узнаем на месте!
+                                        
                                         </p>
+                                        
                                         <p>
                                             Бодрые и в отличном настроении, купим самый вкусный
-                                            кофе друзьям и родственникам <span style="color: red;"
+                                            кофе друзьям и родственникам. Поспешите бронировать, места ограничены!  <span style="color: red;"
                                                 class="fa fa-heart"></span>
                                         </p>
                                     </div>
@@ -246,7 +242,7 @@
                                     экскурсия "50 оттенков кофе Isla";
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    дегустация 5 видов кофе;
+                                    дегустация 3-4 видов кофе;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     встреча и сопровождение представителя Нового поворота;
@@ -264,10 +260,7 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    дополнительные расходы (покупка кофе);
-                                </li>
-                                <li class="list-group-item list-group-item-danger ">
-                                    проезд до места начала экскурсии и обратно ;
+                                 проезд до места начала экскурсии и обратно ;
                                 </li>
                                 <ul>
                         </div>
