--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -128,14 +128,9 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br />
                             <span class="txt-alg-jf">
-                                Собери компанию 10 человек, 11 едет бесплатно )<br />
-                                Цена билета: 400 грн от 6 лет, 300 грн 4-6 лет
-                                при брони до 30 августа
-                                420 грн от 6 лет, 320 грн 4-6 лет
-                                при брони с 1 до 7 сентября
-                                440 грн от 6 лет, 340 грн 4-6 лет
-                                при брони с 8 сентября
-                                до 4х бесплатно(без предоставления отдельного места в транспорте)
+                                <br />
+                                Цена билета: 180 грн, 
+                                150 грн /школьники/
                                 +380506702264 Viber/Telegram месенджер/директ
                             </span>
                         </div>
