--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="Экскурсия и дегустация кофе Isla!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-cofe-Isla.html" />
-    <meta property="og:image" content="images/cofe-max.jpg">
+    <meta property="og:image" content="images/Cofe-isla/inside-cofe-isla.jpg">
     <!--End Open Graph data-->
 
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
