--- a/Page-Zoo-and-springs.html
+++ b/Page-Zoo-and-springs.html
@@ -4,73 +4,73 @@
 	<script>
 		
 	    //Заголовок
-	    let title = "Title тура ";			
+	    let title = "Зоопарк Юг и источники ";			
 	    // Описание 
-	    let descriptionHead = "Туры выходного дня - Новый поворот, ОПИСАНИЕ  ";		
+	    let descriptionHead = "Туры выходного дня - Новый поворот, ЛУЧШИЙ ПОДАРОК! Зоопарк «Страус –Юг» и серебряные источники!    ";		
 	    //Ключевые слова
-	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Ключевые слова ";		
+	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, 8 марта, экскурсии Запорожье, достопримечательности Запорожье ";		
 	    //Cсылкa Tура 
-	    let linkPage = "https://novipovorot.pp.ua/page-example.html";		
+	    let linkPage = "https://novipovorot.pp.ua/Page-Zoo-and-springs.html";		
 	    //Картинка
-	    let imgInTour = "https://picsum.photos/825/473";		
+	    let imgInTour = "./images/Zoo-and-springs/inside-Zoo-and-springs.jpg";		
 	    //Дата тура
-	    let dateTour = "2022";		
+	    let dateTour = "8 марта 2022";		
 	    //Подзаголовок
-	    let subtitle = "Подзаголовок";		
+	    let subtitle = "ПЛУЧШИЙ ПОДАРОК! Зоопарк «Страус –Юг» и серебряные источники! ";		
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
-		{program: 'Описание1'}, 
-	        {program: 'Описание2'}, 
-		{program: 'Описание3'}, 
-		{program: 'Описание4'}
+		{program: '8 марта в удивительных местах! На экскурсии с милашками животными, полезнейшими серебряными родниками, с морем позитива и конечно интересными сюрпризами! '}, 
+	        {program: 'Хотите увидеть Амурчика козлика с 4мя рожками и сердечком на носу, купить яичко страуса или узнать кто такая патагонская мара ? Срочно бронируй пока есть места, будет очень душевно!'}
 	   ];		
 	  //Информируем
           let inform = [
-		{informPrice: 'Цена билета до ...: взрослые ... грн., дети от 3 до 12 лет ... грн., дети от 13 до 17 лет ... грн.'}, 
-	        {informPrice: 'С ...: взрослые ... грн., дети от 3 до 12 лет ... грн.; дети от 13 до 17 лет ... грн.'}, 
+		{informPrice: 'Цена билета при брони до 28.02 : 600 грн., дети от 6 до 14 лет 550 грн. '}, 
+	        {informPrice: 'При брони с 1 до 7 марта, если будут места 650рн., дети от 6 до 14 лет 600 грн.;'}, 
 		{informPrice:  '*Примечание: До 5 лет без места в транспорте бесплатно.'}
 	   ];	
 	   //Стоимость
-	   let price = "1000 Грн.";		
+	   let price = "от 550 Грн.";		
 	   //Продолжительность
 	   let duration	= "1 День";	
 	   //Описание тура
 	   let descTours = [
-		{time: '09:01', description: 'Описание1'}, 
-		{time: '09:02', description: 'Описание2'}, 
-		{time: '09:03', description: 'Описание3'}, 
-		{time: '18:00', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
+		{time: '11:00 ', description: 'выезд с центра Запорожья после минутки позитива. Каховская-Металлургов-Фестивальная -Автовокзал заберем Вас в этих местах и в путь!'}, 
+		{time: '13:00-15:30 ', description: 'Мы в самом необычным зоопарке.  Раньше это была только Страусиная ферма с множеством поразительных страусов, теперь это милейший зоопарк с смешными попрошайками енотиками, пушистыми коровками, величественными тирами, супер необычными белыми дикобразами и еще многими другими милашками.   Послушаем о жизни в зоопарке, покормим всех кого можно кормить и погладим всех кого можно гладить!    '}, 
+		{time: '15:50-16:50  ', description: 'Серебряные родники Тепренье. Места с «живой» и «мертвой» водой, это настоящая сказка с самыми целебнейшими свойствами! Напьемся серебряных вод от души и наберем с собой! А самые стойкие могут окунуться в купели для любителей холодной водички!  '}, 
+		{time: '19:00', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
 	   ];		
 	  //В стоимость входит
 	  let includedInThePrice = [
-		{includePrice: 'Описание1'}, 
-	        {includePrice: 'Описание2'}, 
-		{includePrice: 'Описание3'}, 
-		{includePrice: 'Описание4'}
+		{includePrice: 'проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; количества людей в группе), '}, 
+	        {includePrice: 'сопровождение представителя нашей компании;'}, 
+		{includePrice: 'входной билет и экскурсия в зоопарке «Страус-Юг»;'}, 
+		{includePrice: 'магнит от Нового поворота, '}, 
+		{includePrice: 'самое замечательное настроение. '}
 	   ];	
 	  //В стоимость не входит
 	  let priceDoesNotInclude = [
-		{doesNotIncludePrice: 'Описание1'}, 
-	        {doesNotIncludePrice: 'Описание2'}, 
-		{doesNotIncludePrice: 'Описание3'}, 
-		{doesNotIncludePrice: 'Описание4'}
+		{doesNotIncludePrice: 'Дополнительно нужно взять с собой перекус в дорогу! '}, 
+	        {doesNotIncludePrice: 'По желанию возможна покупка страусиных яиц, обязательный предзаказ, цена 300грн/шт.'}
 	   ];	
 	  //Тексты подсказок
 	  let helpTexts = [
 		{badge: 'Запорожье'}, 
 	        {badge: 'Новый Поворот Запорожье'}, 
-		{badge: 'Путешествия'}, 
+		{badge: 'Путешествия'},
+	        {badge: '8марта'},
+		{badge: 'экускурсии Запорожье'},
+		{badge: 'достопримечательносьти Запорожье'},
 		{badge: 'Туризм'}
 	   ];
 		
 	</script> 
 
 	<!-- Open Graph -->
-        <meta property="og:title" content="28 Лошадок и Симба">
-        <meta property="og:description" content="Туры выходного дня - Новый поворот, 28 лошадок и зоопарк Симба. Лучший выходной!" />
+        <meta property="og:title" content="Зоопарк Юг и источники">
+        <meta property="og:description" content="Туры выходного дня - Новый поворот, Зоопарк Юг и источники" />
         <meta property="og:type" content="website" />
-	<meta property="og:image" content="./images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg">
-        <meta property="og:url" content="https://novipovorot.pp.ua/page-Horses-Zaporizhzhia.html" />
+	<meta property="og:image" content="./images/Zoo-and-springs/inside-Zoo-and-springs.jpg">
+        <meta property="og:url" content="https://novipovorot.pp.ua/Page-Zoo-and-springs.html" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
